Begin adding doggo photos to the DOM

--- a/src/html/views/partials/meta.njk
+++ b/src/html/views/partials/meta.njk
@@ -3,10 +3,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>dogappreciationclub</title>
-<meta property="og:title" content="dogappreciationclub"/>
+<meta property="og:title" content="dog appreciation club"/>
 
-<meta name="description" content="a site to appreciate dogs more.">
-<meta property="og:description" content="a site to appreciate dogs more." />
+<meta name="description" content="Appreciate doggos more.">
+<meta property="og:description" content="Appreciate doggos more." />
 
 <meta property="og:url" content="http://google.com.au" />
 
