--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -34,32 +34,7 @@ $mobile: (
 @import 'base/*';
 
 // Components
+@import 'sections/*';
+
+// Components
 @import 'components/*';
-
-// Generator Default style, delete these
-h1 {
-	font-size: 2.2rem;
-}
-
-h2 {
-	font-size: 1.8rem;
-}
-
-p {
-	font-size: 1.6rem;
-	line-height: 1.4em;
-}
-
-ol,
-ul {
-	font-size: 1.6rem;
-	line-height: 1.4em;
-}
-
-code {
-	background-color: black;
-	color: white;
-	font-size: 1.4rem;
-
-	padding: 2px 10px;
-}
