--- a/src/html/views/home.njk
+++ b/src/html/views/home.njk
@@ -2,6 +2,10 @@
 
 {% block content %}
 	<div class="home container">
-	<h1 class="title">{{ example_content.title }}</h1>
-	<h2 class="byline">{{ example_content.text }}</h2>
+		<section class="hero">
+			<h1 class="title">Doggo Appreciation Club</h1>
+			<h2 class="byline">You smart. You loyal. You grateful. I apprecatiate that. Go buy your momma a house.</h2>
+		</section>
+		{% include "partials/home/doggo.njk" %}
+	</div>
 {% endblock %}
