Reload all the doggos

--- a/src/css/base/_animations.scss
+++ b/src/css/base/_animations.scss
@@ -6,6 +6,6 @@ $a-mobile: 300ms;
 $a-mobile-enter: 225ms;
 $a-mobile-exit: 195ms;
 
-.animate {
+.a-animate {
 	transition: all $a-desktop ease-out;
 }
