--- a/src/html/views/home.njk
+++ b/src/html/views/home.njk
@@ -5,6 +5,7 @@
 		<section class="hero">
 			<h1 class="title">Doggo Appreciation Club</h1>
 			<h2 class="byline">You smart. You loyal. You grateful. I apprecatiate that. Go buy your momma a house.</h2>
+			<a href="#" class="button replace">Treat yourself.</a>
 		</section>
 		{% include "partials/home/doggo.njk" %}
 	</div>
