--- a/src/html/views/partials/home/doggo.njk
+++ b/src/html/views/partials/home/doggo.njk
@@ -1,4 +1,6 @@
 <section class="doggo">
-	<h2 class="dog">Doggo section, ya bish</h2>
+	<div class="main-photo"></div>
+	<h2 class="dog">Doggo</h2>
+	<div class="info"></div>
 	<div class="grid grid-container"></div>
 </section>
