--- a/src/html/views/home.njk
+++ b/src/html/views/home.njk
@@ -4,9 +4,9 @@
 	<div class="home container">
 		<section class="hero">
 			<h1 class="title">Doggo Appreciation Club</h1>
-			<h2 class="byline">You smart. You loyal. You grateful. I apprecatiate that. Go buy your momma a house.</h2>
-			<a href="#" class="button replace">Treat yourself.</a>
+			<h2 class="byline">You smart. You loyal. You grateful. I apprecatiate that.</h2>
 		</section>
 		{% include "partials/home/doggo.njk" %}
+		{% include "partials/footer.njk" %}
 	</div>
 {% endblock %}
