--- a/src/html/views/partials/home/doggo.njk
+++ b/src/html/views/partials/home/doggo.njk
@@ -1,4 +1,5 @@
 <section class="doggo">
+	<a href="#" class="button replace">Treat yourself.</a>
 	<div class="main-photo"></div>
 	<h2 class="dog">Doggo</h2>
 	<div class="info"></div>
