--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -10,17 +10,20 @@
 	width: 200px;
 	height: 60px;
 
+	@include f-primary-bold;
 	font-size: 2rem;
 
-	background-color: $c-grey;
+	background-color: $c-light-grey;
 	text-align: center;
 	line-height: 60px;
 
-	transition: background-color $a-desktop-enter ease-in;
+	transition: all $a-desktop-enter ease-in;
 	border: 0;
+	// border-bottom: 3px solid $c-black;
 
 	&:hover {
-		background-color: darken($c-grey, 10%);
+		box-shadow: $e-raised;
+		// background-color: darken($c-grey, 10%);
 	}
 
 	@include grid-media($mobile) {
