--- a/src/css/sections/_home.scss
+++ b/src/css/sections/_home.scss
@@ -1,11 +1,17 @@
 .home {
-	padding: 42px 0;
-
 	.title {
 		text-align: center;
+
+		@include grid-media($mobile) {
+			font-size: 3.2rem;
+		}
 	}
 
 	.byline {
 		text-align: center;
+
+		@include grid-media($mobile) {
+			font-size: 2.4rem;
+		}
 	}
 }
