Add favicon etc

--- a/src/html/views/partials/meta.njk
+++ b/src/html/views/partials/meta.njk
@@ -2,21 +2,27 @@
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>dogappreciationclub</title>
-<meta property="og:title" content="dog appreciation club"/>
+<title>Dog Appreciation Club.</title>
+<meta property="og:title" content="Dog Appreciation Club."/>
 
 <meta name="description" content="Appreciate doggos more.">
 <meta property="og:description" content="Appreciate doggos more." />
 
-<meta property="og:url" content="http://google.com.au" />
+<meta property="og:url" content="http://dogappreciation.club" />
 
-<meta property="og:image" content="http://placehold.it/1200/630" />
+<meta property="og:image" content="http://dogappreciation.club/img/opengraph.png" />
 
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 
-<meta property="og:site_name" content="dogappreciationclub"/>
+<meta property="og:site_name" content="Dennis does beer"/>
 <meta property="og:type" content="website" />
 
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="http://placehold.it/1200/630" />
+<meta name="twitter:image" content="http://dogappreciation.club/img/opengraph.png" />
+
+<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+<link rel="manifest" href="/favicon.json">
+<meta name="theme-color" content="#ffffff">
