--- a/src/html/views/partials/meta.njk
+++ b/src/html/views/partials/meta.njk
@@ -15,7 +15,7 @@
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 
-<meta property="og:site_name" content="Dennis does beer"/>
+<meta property="og:site_name" content="Dog Appreciation Club."/>
 <meta property="og:type" content="website" />
 
 <meta name="twitter:card" content="summary_large_image" />
